# cuda-training-series-CMake

./: .gitignore  CMakeLists.txt  CMakePresets.json
hw1/: CMakeLists.txt  hello.cu  matrix_mul.cu  matrix_mul_cpu.cu  vector_add.cu
hw2/: CMakeLists.txt  matrix_mul_shared.cu  stencil_1d.cu
hw3/: CMakeLists.txt  vector_add_new.cu
hw4/: CMakeLists.txt  matrix_sums.cu
hw5/: CMakeLists.txt  matrix_sums.cu
hw6/: CMakeLists.txt  linked_list.cu
hw7/: CMakeLists.txt  multi.cu  overlap.cu
